# pizarnik

./: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  TYPES.md  cabal.project  notes.txt  pizarnik.cabal
bench/: Bench.hs
examples/: eo.piz  fact.piz  vierergruppe.piz
lib/: deque.piz  list.piz  numbertheory.piz  tree.piz
prelude/: fn.piz  ord.piz
run/: Opt.hs
src/: A.hs  B.hs  C.hs  Dbg.hs  E.hs  Imp.hs  L.x  M.hs  Nm.hs  P.hs  Parse.y  Pr.hs  R.hs  TS.hs  Ty.hs
src/Nm/: Map.hs
src/Ty/: Clone.hs
test/: Spec.hs
test/data/: beta.piz  pmfail.piz
test/examples/: bool.piz  exp.piz  ifte.piz  maybe.piz  mutual.piz  pat.piz
tex/: Makefile  background.tex  bib.bib  pattern-match.tex  theory.tex  types.tex
vim/ftdetect/: pizarnik.vim
vim/ftplugin/: pizarnik.vim
vim/syntax/: pizarnik.vim
